--- a/contacto.html
+++ b/contacto.html
@@ -94,55 +94,59 @@
             </ol>
         </nav>
         <div class="d-flex justify-content-center">
-            <div class="mb-5">
+            <div class="col-12 mb-5">
                 <div class="my-5 row d-flex justify-content-center">
-                    <h1 class="display-4 align-center">Contáctenos</h1>
+                    
                 </div>
 
-                <div class="row mb-5">
-                    <form action="" class="col-6 mb-5" method="post">
+                <div class="row  d-flex justify-content-center mb-5">
+                    <form action="" class="col-10 mb-5" method="post">
                         <div class="card border-rounded-0 border-0">
-                            <div class="card-body p-3">
-                                <div class="form-group">
-                                    <div class="input-group mb-2">
-                                        <div class="input-group-prepend">
-                                            <div class="input-group-text"><i class="bi bi-person-fill"></i></div>
+                            <div class="row d-flex justify-content-center card-body ">
+                                <div class="mt-3  col-6">
+                                    <h1 class="display-4 mb-5 align-center">Contáctenos</h1>
+                                    <div class="form-group">
+                                        <div class="input-group mb-2">
+                                            <div class="input-group-prepend">
+                                                <div class="input-group-text"><i class="bi bi-person-fill"></i></div>
+                                            </div>
+                                            <input type="text" class="form-control" id="nombre" name="nombre"
+                                                placeholder="Nombre y Apellido" required>
                                         </div>
-                                        <input type="text" class="form-control" id="nombre" name="nombre"
-                                            placeholder="Nombre y Apellido" required>
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group mb-2">
-                                        <div class="input-group-prepend">
-                                            <div class="input-group-text"><i class="bi bi-at"></i></div>
+                                    <div class="form-group">
+                                        <div class="input-group mb-2">
+                                            <div class="input-group-prepend">
+                                                <div class="input-group-text"><i class="bi bi-at"></i></div>
+                                            </div>
+                                            <input type="email" class="form-control" id="nombre" name="email"
+                                                placeholder="ejemplo@gmail.com" required>
                                         </div>
-                                        <input type="email" class="form-control" id="nombre" name="email"
-                                            placeholder="ejemplo@gmail.com" required>
                                     </div>
-                                </div>
 
-                                <div class="form-group">
-                                    <div class="input-group mb-2">
-                                        <div class="input-group-prepend">
-                                            <div class="input-group-text"><i class="bi bi-chat-left-text"></i></div>
+                                    <div class="form-group">
+                                        <div class="input-group mb-2">
+                                            <div class="input-group-prepend">
+                                                <div class="input-group-text"><i class="bi bi-chat-left-text"></i></div>
+                                            </div>
+                                            <textarea class="form-control" placeholder="Envianos tu Mensaje"
+                                                required></textarea>
                                         </div>
-                                        <textarea class="form-control" placeholder="Envianos tu Mensaje"
-                                            required></textarea>
+                                    </div>
+
+                                    <div class="text-center">
+                                        <input type="submit" value="Enviar"
+                                            class="btn mt-5 btn-success btn-block rounded-1 py-2">
                                     </div>
                                 </div>
-
-                                <div class="text-center">
-                                    <input type="submit" value="Enviar"
-                                        class="btn btn-success btn-block rounded-1 py-2">
+                                <div class="d-flex justify-content-center col-6">
+                                    <img class="mt-3 img-responsive img-fluid rounded"
+                                        src="./images/support.jpg" alt="Imágen de Ayuda al usuario">
                                 </div>
                             </div>
                         </div>
+
                     </form>
-                    <div class="col-6">
-                        <img class="mt-3 img-responsive img-fluid rounded float-right" src="./images/support.jpg"
-                            alt="Imágen de Ayuda al usuario">
-                    </div>
                 </div>
             </div>
 
