--- a/index.html
+++ b/index.html
@@ -13,87 +13,80 @@
 
 
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/pricing/">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+     <!-- Bootstrap core CSS -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+     crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+     crossorigin="anonymous"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+     crossorigin="anonymous"></script>
+ <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/pricing/">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-  <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
-  <!-- Custom styles for this template -->
-  <link href="./css/styles.css" rel="stylesheet">
-  <style>
-
-  </style>
-  <!-- Custom styles for this template -->
-  <link href="./index_files/jumbotron.css" rel="stylesheet">
-  <link href="./css/styles.css" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+ <!-- MDB -->
+ <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
+ <!-- Custom styles for this template -->
+ <link href="./css/styles.css" rel="stylesheet">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand mr-4" href="index.html"><i class="bi bi-server"></i> UTN-HOSTING</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container">
+            <a class="navbar-brand mr-4" href="index.html"><i class="bi bi-server"></i> UTN-HOSTING</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item mr-2">
-                    <a class="nav-link active" href="index.html">HOME</a>
-                </li>
-                <li class="nav-item mr-2">
-                    <a class="nav-link" href="aboutus.html">NOSOTROS</a>
-                </li>
-                <li class="nav-item mr-2">
-                    <a class="nav-link" href="contacto.html">CONTACTO</a>
-
-                </li>
-                <li class="nav-item dropdown mr-2">
-                    <a class="nav-link dropdown-toggle " href="#" id="dropdown01" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="alojamiento.html">ALOJAMIENTO</a>
-                        <a class="dropdown-item" href="diseño.html">DISEÑO</a>
-                        <a class="dropdown-item" href="construccion.html">CONSTRUCCIÓN</a>
-                        <a class="dropdown-item" href="mantenimiento.html">MENTENIMIENTO</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown mr-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><i class="flag flag-argentina"></i> AR</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown02">
-                        <a class="dropdown-item" href="#"><i class="flag flag-argentina"></i> AR</a>
-                        <a class="dropdown-item" href="#"><i class="flag flag-us"></i> EEUU</a>
-                        <a class="dropdown-item" href="#"><i class="flag flag-brazil"></i> BRA</a>
-                    </div>
-                </li>
-            </ul>
-            <form class="form-inline justify-content-lg-end justify-content-md-start">
-                <input class="form-control col-md-7 d-md-none d-lg-none d-xl-block mr-lg-2" type="text"
-                    placeholder="Buscar" aria-label="Buscar">
-                <button class="btn btn-primary mr-3 my-2 my-sm-0" type="submit"><i
-                        class="bi bi-search"></i></button>
-                <button type="button" class="btn btn-success">
-                    <i class="bi bi-cart3"></i>
-                </button>
-            </form>
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item mr-2">
+                        <a class="nav-link" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a class="nav-link" href="aboutus.html">NOSOTROS</a>
+                    </li>
+                    <li class="nav-item mr-2 active">
+                        <a class="nav-link" href="contacto.html">CONTACTO</a>
+                    </li>
+                    <li class="nav-item dropdown mr-2">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="alojamiento.html">ALOJAMIENTO</a>
+                            <a class="dropdown-item" href="diseño.html">DISEÑO</a>
+                            <a class="dropdown-item" href="construccion.html">CONSTRUCCIÓN</a>
+                            <a class="dropdown-item" href="mantenimiento.html">MENTENIMIENTO</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown mr-2">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"><i class="flag flag-argentina"></i> AR</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown02">
+                            <a class="dropdown-item" href="#"><i class="flag flag-argentina"></i> AR</a>
+                            <a class="dropdown-item" href="#"><i class="flag flag-us"></i> EEUU</a>
+                            <a class="dropdown-item" href="#"><i class="flag flag-brazil"></i> BRA</a>
+                        </div>
+                    </li>
+                </ul>
+                <form class="form-inline justify-content-lg-end justify-content-md-start">
+                    <input class="form-control col-md-7 d-md-none d-lg-none d-xl-block mr-lg-2" type="text"
+                        placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-primary mr-3 my-2 my-sm-0" type="submit"><i
+                            class="bi bi-search"></i></button>
+                    <button type="button" class="btn btn-success">
+                        <i class="bi bi-cart3"></i>
+                    </button>
+                </form>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
 
   <main role="main">
@@ -114,7 +107,7 @@
               <!-- <h5>First slide label</h5>
               <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
               <a class="btn btn-warning" href="https://getbootstrap.com/docs/4.3/examples/jumbotron/#"
-                role="button">Alojamientos »</a>
+                role="button">Alojamiento »</a>
             </div>
           </div>
           <div class="carousel-item">
